<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/Push"
        android:title="@string/title_push"/>
    <item
        android:id="@+id/Pull"
        android:title="@string/title_pull"/>
    <item
        android:id="@+id/Modify"
        android:title="@string/main_notes_title_modify"/>
    <item
        android:id="@+id/show_commit_short_log"
        android:title="@string/main_notes_show_changelog"/>
    <item
        android:id="@+id/show_all_remote_branches"
        android:title="@string/main_notes_show_all_remote_branches"/>
    <item
        android:id="@+id/Remove"
        android:title="@string/title_remove"/>
    <item
        android:id="@+id/AutoCommit"
        android:title="@string/main_notes_auto_commit"/>
    <item
        android:id="@+id/CalculateStorage"
        android:title="@string/main_notes_calculate_storage"/>
    <item
        android:id="@+id/Backup"
        android:title="@string/Backup"/>

</menu>