<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <ListPreference
        android:key="AppLanguage"
        android:title="@string/pref_app_language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="system" />

    <ListPreference
        android:key="AppTheme"
        android:title="@string/pref_app_theme"
        android:summary="@string/pref_app_theme_summary"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="system" />

    <androidx.preference.EditTextPreference
        app:key="GitAuthorName"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:summary=""
        app:title="@string/GitAuthorName">
    </androidx.preference.EditTextPreference>

    <androidx.preference.EditTextPreference
        app:key="GitAuthorEmail"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:summary=""
        app:title="@string/GitAuthorEmail">
    </androidx.preference.EditTextPreference>

    <androidx.preference.EditTextPreference
        app:defaultValue="18"
        app:key="GitEditTextSize"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="@string/GitEditTextSize">
    </androidx.preference.EditTextPreference>

    <androidx.preference.CheckBoxPreference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:defaultValue="false"
        app:key="GitCheckBoxCommitMessage"
        app:title="@string/GitCheckBoxCommitMessage">
    </androidx.preference.CheckBoxPreference>

    <androidx.preference.EditTextPreference
        app:defaultValue="note"
        app:key="GitHubRepoPrefix"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="@string/pref_github_repo_prefix_title"
        app:summary="@string/pref_github_repo_prefix_summary">
    </androidx.preference.EditTextPreference>

    <androidx.preference.CheckBoxPreference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:defaultValue="true"
        app:key="GitCloneSkipLocal"
        app:title="@string/GitCloneSkipLocal">
    </androidx.preference.CheckBoxPreference>

    <ListPreference
        android:key="GitSyncInterval"
        android:title="@string/pref_sync_interval_title"
        android:summary="@string/pref_sync_interval_summary"
        android:entries="@array/sync_interval_entries"
        android:entryValues="@array/sync_interval_values"
        android:defaultValue="60" />

    <ListPreference
        android:key="Sort"
        android:title="@string/Sort"
        android:entries="@array/Sort"
        app:summary="@string/Sort11"
        app:defaultValue="11"
        android:entryValues="@array/SortData"/>

    <androidx.preference.EditTextPreference
        app:defaultValue="master"
        app:key="GitRemoteName"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="@string/GitRemoteName">
    </androidx.preference.EditTextPreference>

    <androidx.preference.Preference
        app:key="GitPurgeHistory"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="@string/pref_purge_title"
        app:summary="@string/pref_purge_summary" />

    <androidx.preference.PreferenceCategory
        app:allowDividerAbove="true"
        app:title="@string/pref_about_category_title">

        <androidx.preference.Preference
            app:key="AppVersion"
            app:title="@string/pref_app_version_title"
            app:summary="4.009" />

        <androidx.preference.Preference
            app:key="FeedbackEmail"
            app:title="@string/pref_feedback_title"
            app:summary="william@kafeiou.pw" />

        <androidx.preference.Preference
            app:key="PrivacyPolicy"
            app:title="@string/pref_privacy_policy_title"
            app:summary="https://kafeiou.pw/GitNotePrivacyPolicy.html" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
