<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="inmethod.gitnotetaking.MainActivity">
    <item
        android:id="@+id/m_area"
        android:enabled="true"
        android:title="@string/main_menu_add"
        android:titleCondensed="@string/main_menu_add"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_create_local_git"
                android:icon="@drawable/ic_local_note"
                android:orderInCategory="100"
                android:title="@string/action_create_local_git"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_clone_git_remote"
                android:icon="@drawable/ic_git_logo"
                android:orderInCategory="101"
                android:title="@string/action_clone"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_create_github_git"
                android:icon="@drawable/ic_github"
                android:orderInCategory="102"
                android:title="@string/action_create_github_git"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
