<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textDefaultBrahch"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:text="@string/tv_remote_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAuthorEmail" />

        <TextView
            android:id="@+id/textAuthorEmail"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:text="@string/main_notes_author_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAuthorName" />

        <EditText
            android:id="@+id/editAuthorEmail"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/textAuthorEmail"
            app:layout_constraintTop_toBottomOf="@+id/editAuthorName" />

        <EditText
            android:id="@+id/editAuthorName"
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/textAuthorName"
            app:layout_constraintTop_toBottomOf="@+id/editLocalGitName" />

        <TextView
            android:id="@+id/textAuthorName"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:text="@string/main_notes_author_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNickName" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="OK"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDefaultBrahch" />

        <EditText
            android:id="@+id/editUserAccount"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/textUserAccount"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

        <EditText
            android:id="@+id/editUserPassword"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/textPassword"
            app:layout_constraintTop_toBottomOf="@+id/editUserAccount" />

        <Button
            android:id="@+id/btnGitHubReauth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/github_reauth_button"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUserPassword" />

        <EditText
            android:id="@+id/editLocalGitName"
            android:layout_width="140dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/textNickName"
            app:layout_constraintTop_toBottomOf="@+id/btnGitHubReauth"
            app:layout_goneMarginTop="8dp" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="200dp"
            android:layout_height="23dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="150dp"
            android:gravity="center"
            android:text="@string/main_notes_title_modify"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textUserAccount"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:text="@string/tv_user_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

        <TextView
            android:id="@+id/textNickName"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:text="@string/tv_git_nick_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGitHubReauth"
            app:layout_goneMarginTop="8dp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:text="@string/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUserAccount" />

        <Spinner
            android:id="@+id/spinnerBranch"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/textDefaultBrahch"
            app:layout_constraintTop_toBottomOf="@+id/editAuthorEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>